objects/Viewpath__VP_Project__c.object
<CustomObject>
    <fields>
        <fullName>View_Path__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>View Path</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Viewpath Projects</relationshipLabel>
        <relationshipName>Viewpath_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Viewpath__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provide related list for Accounts layouts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Viewpath Projects</relationshipLabel>
        <relationshipName>Viewpath_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Viewpath__ChatterEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ChatterEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Viewpath__ChatterGroupId__c</fullName>
        <description>The 18-Char ID of the Chatter Group that is associated with this project. Custom lookup fields don&apos;t support the type &apos;Group&apos;; this is a workaround.</description>
        <externalId>true</externalId>
        <label>ChatterGroupId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewpath__Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Viewpath__Finish__c</fullName>
        <label>Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Viewpath__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provide related list for Opportunities layouts</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Viewpath Projects</relationshipLabel>
        <relationshipName>Viewpath_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Viewpath__ProjectId__c</fullName>
        <description>Viewpath Project ID</description>
        <externalId>true</externalId>
        <label>ProjectId</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Viewpath__Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <label>Viewpath Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Viewpath Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>